# df

./: .gitignore  Makefile  TODO.md
df-go/: go.mod  main.go
df-go/client/: client.go
df-go/df/: datafusion.pb.go  datafusion.proto  datafusion_grpc.pb.go
df-go/pb/: datafusion.pb.go  datafusion.proto  datafusion_grpc.pb.go
df-go/server/: server.go
df-rs/: Cargo.toml  build.rs
df-rs/df-rs-ffi/: Cargo.toml  df.h
df-rs/df-rs-ffi/src/: ffi.rs
df-rs/examples/: client.rs  server.rs
df-rs/pb/: datafusion.proto
df-rs/src/: client.rs  lib.rs  server.rs
