[package]
name = "df-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
log = "0.4"

[build-dependencies]
tonic-build = "*"

[dev-dependencies]
simple_logger = "5.0.0"
